product price overlaping fix

--- a/assets/style.css
+++ b/assets/style.css
@@ -1628,7 +1628,7 @@ single product gride list
 @media(max-width:768px){
   .product-content h6{
     
-    max-width: 75%;
+    max-width: 67.5%;
   }
 }
 /* product price css */
